# bpmail

./: .clang-format  .editorconfig  .gitattributes  .gitignore  README.md  addr.c  hello.c  meson.build  meson_options.txt  temp.c  test.c
.github/ISSUE_TEMPLATE/: bug_report.md
man/: bpmailrecv.1  bpmailsend.1
src/: bpmailrecv.c  bpmailrecv.h  bpmailsend.c  bpmailsend.h  global.h  meson.build
test/: blah.txt  loopback.rc  meson.build  resolver.py  temp.txt  temp2.txt  temp3.txt  test_bpmail.py
test/messages/: batch_smtp.txt  node_nbr_1-2-3_one_addr.eml  node_nbr_1_mult_addr.eml  node_nbr_1_one_addr.eml  node_nbr_1_one_idn_addr.eml  node_nbr_2-3-5_one_addr.eml  node_nbr_2_mult_addr.eml  node_nbr_2_one_addr.eml  node_nbr_2_one_idn_addr.eml
